@@ -8,6 +8,7 @@ import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.dsl.KotlinJsCompile
 import org.jetbrains.kotlin.gradle.plugin.KotlinSourceSetTree
 import org.jetbrains.kotlin.gradle.targets.js.webpack.KotlinWebpackConfig
+import org.jetbrains.kotlin.gradle.targets.js.yarn.YarnRootExtension
 
 plugins {
     alias(libs.plugins.kotlinMultiplatform)
@@ -85,9 +86,11 @@ kotlin {
             dependencies {
                 implementation(compose.desktop.currentOs)
                 implementation(compose.desktop.uiTestJUnit4)
+                implementation(compose.uiTest)
                 implementation(libs.androidx.ui.test.junit4.desktop)
                 implementation(libs.ktor.client.mock)
-
+                implementation(libs.kotlin.test)
+                implementation(libs.koin.test)
             }
         }
 
@@ -151,11 +154,6 @@ kotlin {
             implementation(libs.ktor.client.darwin)
         }
 
-        desktopTest.dependencies {
-            implementation(libs.kotlin.test)
-            implementation(compose.uiTest)
-            implementation(libs.koin.test)
-        }
 
         jsMain.dependencies {
             implementation(kotlinWrappers.browser)
@@ -212,63 +210,10 @@ dependencies {
     testImplementation(libs.koin.test)
 }
 
-tasks.withType<KotlinJsCompile>().configureEach {
-    kotlinOptions {
-        target = "es2015"
-    }
-}
-
-applyKtorWasmWorkaround("3.0.0-beta-2")
-
-fun Project.applyKtorWasmWorkaround(version: String) {
-    configurations.all {
-        if (name.startsWith("wasmJs")) {
-            resolutionStrategy.eachDependency {
-                if (requested.group.startsWith("io.ktor") &&
-                    requested.name.startsWith("ktor-")
-                ) {
-                    useVersion(version)
-                }
-            }
-        }
-    }
-}
-
-compose.desktop {
-
-    application {
-        mainClass = "MainKt"
-
-        // all your other configuration, etc
-        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
-        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED") // recommended but not necessary
-
-        if (System.getProperty("os.name").contains("Mac")) {
-            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
-            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-        }
-
-        nativeDistributions {
-            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
-            packageName = "ru.workinprogress.mani"
-            packageVersion = "1.0.0"
-        }
-    }
-}
-
-afterEvaluate {
-    tasks.withType<JavaExec> {
-        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
-        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
-
-        if (System.getProperty("os.name").contains("Mac")) {
-            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
-            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
-            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-        }
-    }
-}
-
 baselineProfile {
     dexLayoutOptimization = true
+}
+
+rootProject.plugins.withType<org.jetbrains.kotlin.gradle.targets.js.yarn.YarnPlugin> {
+    rootProject.the<YarnRootExtension>().resolution("ws", "8.18.0")
 }
